--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon app.js"
+        "start": "pm2 start app.js --watch"
     },
     "author": "",
     "license": "ISC",
@@ -18,6 +18,7 @@
         "mongodb": "^2.2.12",
         "mongoose": "^6.9.1",
         "mongoose-sequence": "^5.3.1",
-        "nodemon": "^3.0.1"
+        "nodemon": "^3.0.1",
+        "pm2": "^5.3.0"
     }
 }
