--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "pm2 start app.js --watch"
+        "start": "nodemon app.js"
     },
     "author": "",
     "license": "ISC",
@@ -13,12 +13,14 @@
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "firebase-admin": "^11.11.1",
         "jsonwebtoken": "^9.0.2",
         "marvel-dc-name-generator": "^1.1.0",
         "mongodb": "^2.2.12",
         "mongoose": "^6.9.1",
         "mongoose-sequence": "^5.3.1",
         "nodemon": "^3.0.1",
-        "pm2": "^5.3.0"
+        "pm2": "^5.3.0",
+        "socket.io": "^4.7.2"
     }
 }
