--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon app.js"
+        "start": "pm2 start app.js --watch"
     },
     "author": "",
     "license": "ISC",
@@ -21,6 +21,8 @@
         "mongoose-sequence": "^5.3.1",
         "nodemon": "^3.0.1",
         "pm2": "^5.3.0",
-        "socket.io": "^4.7.2"
+        "socket.io": "^4.7.2",
+        "udid": "^0.1.4",
+        "uuid": "^9.0.1"
     }
 }
