--- a/.env
+++ b/.env
@@ -1,2 +1,11 @@
 DB_CONNECTION = "mongodb://ineedapp:ineed@ac-i8snjik-shard-00-00.ttkxby0.mongodb.net:27017,ac-i8snjik-shard-00-01.ttkxby0.mongodb.net:27017,ac-i8snjik-shard-00-02.ttkxby0.mongodb.net:27017/ineed-dev?ssl=true&replicaSet=atlas-scyvou-shard-0&authSource=admin&retryWrites=true&w=majority"
 JWT_TOKEN_SECRET = saireddy
+ACCESS_KEY= 
+SECRET_KEY= 
+
+FILESYSTEM_DRIVER= s3
+AWS_ACCESS_KEY_ID=AKIAUBFHYX5ITC6AYH2L
+AWS_SECRET_ACCESS_KEY=  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
+AWS_DEFAULT_REGION= us-east-1
+AWS_BUCKET= ineed-messages
+
