--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "aws-sdk": "^2.1525.0",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
@@ -19,6 +20,8 @@
         "mongodb": "^2.2.12",
         "mongoose": "^6.9.1",
         "mongoose-sequence": "^5.3.1",
+        "multer": "^1.4.5-lts.1",
+        "multer-s3": "^3.0.1",
         "nodemon": "^3.0.1",
         "pm2": "^5.3.0",
         "socket.io": "^4.7.2",
